--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "mongodb": "^7.0.0",
-    "next": "15.5.0",
+    "next": "^15.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -18,7 +18,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "^15.1.6",
     "tailwindcss": "^4"
   }
 }
